reading, converting, extract fnger print, posting results to server

--- a/Props/Config.properties
+++ b/Props/Config.properties
@@ -2,3 +2,5 @@ login=fatclient
 passwd=0000
 login_adress=http://192.168.1.19:8082/auth/signin
 musics_list_adress=http://192.168.1.19:8082/music/non-analysed
+download_adress=http://192.168.1.19:8082/file/download/
+similarity_adress=http://192.168.1.19:8082/music/similarity/
